FIX：更新env.example，修复报错

--- a/.env.example
+++ b/.env.example
@@ -110,7 +110,7 @@ AI_FALLBACK_TO_GRID=true
 DEBUG_MODE=false
 
 # 日志级别（DEBUG, INFO, WARNING, ERROR）
-LOG_LEVEL=INFO
+#LOG_LEVEL=INFO
 
 # ============================================================================
 # Web监控配置
@@ -136,7 +136,10 @@ GRID_PARAMS_JSON={"initial": 2.0, "min": 1.0, "max": 4.0}
 GRID_CONTINUOUS_PARAMS_JSON={"base_grid": 2.5, "center_volatility": 0.25, "sensitivity_k": 10.0}
 
 # 动态时间间隔参数
-DYNAMIC_INTERVAL_PARAMS_JSON={"default_interval_hours": 1.0}
+DYNAMIC_INTERVAL_PARAMS_JSON={"default_interval_hours":1.0,"volatility_to_interval_hours":[{"range":[0,0.10],"interval_hours":1.0},{"range":[0.10,0.20],"interval_hours":0.5},{"range":[0.20,0.30],"interval_hours":0.25},{"range":[0.30,999],"interval_hours":0.125}]}
 
 # 是否启用成交量加权
 ENABLE_VOLUME_WEIGHTING=true
+
+# 初始本金（用于计算仓位比例）
+INITIAL_PRINCIPAL=1000
